--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_002.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_002.cshtml
@@ -6,6 +6,7 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    Layout = "~/Areas/Reportes/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm("CONTA_002", "ContabilidadReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
