--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_006.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_006.cshtml
@@ -4,6 +4,7 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    Layout = "~/Areas/Reportes/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm())
 {
