--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_rubros.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_rubros.cshtml
@@ -68,7 +68,7 @@
 
         settings.Columns.Add(column =>
         {
-            column.FieldName = "pc_Cuenta_prov_debito";
+            column.FieldName = "pc_Cuenta";
             column.Caption = "Cuenta";
             column.Width = Unit.Percentage(25);
             column.EditFormSettings.Visible = DefaultBoolean.False;
