--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
@@ -800,10 +800,9 @@
                 contentType: 'application/json; charset=utf-8',
                 success: function (data) {
 
-                    $("#co_plazo").val(data.pr_plazo);
-
+                    $("#co_plazo").val(data.pr_plazo);       
                     var date = moment(co_FechaFactura.GetValue(), "DD-MM-YYYY").add(data.pr_plazo, 'days');
-                    co_FechaFactura_vct.SetValue(new Date(moment(date).format("DD/MM/YYYY")));
+                    co_FechaFactura_vct.SetValue(new Date(date));
                 },
                 error: function (error) {
                 }
