--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Index.cshtml
@@ -56,6 +56,14 @@
                 </button>
             </div>
         </div>
+        <div class="box-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <a class="btn btn-primary" href="@Url.Action("Importar","Empleado",new { Area = "RRHH", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
+                </div>
+            </div>
+            @Html.Action("GridViewPartial_ro_rol", new { IdSucursal = Model.IdSucursal })
+        </div>
         <!-- /.box-body -->
         <div class="box-footer">
             [@Session["IdEmpresa"]] @Session["nom_empresa"]
@@ -64,5 +72,4 @@
     </div>
 
 }
-
 
