--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Nuevo.cshtml
@@ -11,6 +11,7 @@
 @using (Html.BeginForm("Nuevo", "ProcesarRol", FormMethod.Post, new { @class = "form", @role = "form" }))
 {@Html.HiddenFor(q => q.IdEmpresa, new { @id="IdEmpresa"});
 @Html.HiddenFor(q => q.IdRol);
+    @Html.HiddenFor(q => q.IdTransaccionSession);
 
 <div class="row">
     <div class="col-md-12">
