--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/ContabilizarPeriodo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/ContabilizarPeriodo.cshtml
@@ -24,6 +24,7 @@
     @Html.HiddenFor(q => q.IdRol);
     @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdSucursal);
+    @Html.HiddenFor(q => q.IdTransaccionSession , new { @id="IdTransaccionSession"});
 
 
 
