--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_sueldo_x_pagar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_sueldo_x_pagar.cshtml
@@ -1,5 +1,4 @@
 @using System.Web.UI.WebControls;
-@model Core.Erp.Info.RRHH.ro_rol_Info
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_sueldo_x_pagar";
@@ -123,10 +122,11 @@
                 sp.MaxValue = 999999999;
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_debe");
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_haber");
         settings.Settings.ShowFooter = true;
 
     });
 }
-@grid.Bind(Model.lst_sueldo_x_pagar).GetHtml()
+@grid.Bind(Model).GetHtml()
