--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_010.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_010.cshtml
@@ -36,21 +36,23 @@
                             @Html.Partial("_CmbSucursal_reportes_RRHH", Model.IdSucursal)
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <label for="IdDivision">División</label>
                             @Html.Partial("_CmbDivision_reportes", Model.IdDivision)
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <label for="IdArea">Area</label>
                             @Html.Partial("_CmbArea_reportes", Model.IdArea)
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="IdCatalogo">Estado</label>
+                            @Html.DropDownListFor(q => q.em_status, new SelectList(ViewBag.lst_EstadoEmpleado, "CodCatalogo", "ca_descripcion"), new { @class = "form-control", @id = "CodCatalogo" })
+                            @Html.ValidationMessageFor(q => q.em_status, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
