--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_CmbFlujo_ConciliacionCaja.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_CmbFlujo_ConciliacionCaja.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "Caja", Action = "CmbFlujo_ConciliacionCaja", Area = "ConciliacionCaja" };
+        settings.CallbackRouteValues = new { Controller = "ConciliacionCaja", Action = "CmbFlujo_ConciliacionCaja", Area = "Caja" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "Descricion";
