--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/_GridViewPartial_importacion_novedades_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/_GridViewPartial_importacion_novedades_det.cshtml
@@ -47,6 +47,8 @@
         settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(15);
         settings.Columns.Add("pe_apellido","Empleado").Width = Unit.Percentage(50);
         settings.Columns.Add("Valor", "Valor").Width = Unit.Percentage(15);
+        settings.Columns.Add("CantidadHoras", "#Hora").Width = Unit.Percentage(10);
+
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor");
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Count, "Secuencia");
 
