--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_009.cshtml
@@ -29,6 +29,12 @@
         </div>
         <div class="box-body">
             <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="IdSucursal">Sucursal</label>
+                        @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control" })
+                    </div>
+                </div>
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="fecha_ini">Fecha inicio*</label>
@@ -66,6 +72,13 @@
                             settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                         }).GetHtml()
                             @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label for="mostrarAnulados">@Html.CheckBoxFor(q => q.mostrarAnulados) Mostrar anulados</label>
                         </div>
                     </div>
                 </div>
