--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbCliente_Factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbCliente_Factura.cshtml
@@ -4,8 +4,8 @@
     {
         settings.Name = "IdCliente";
         settings.Width = Unit.Percentage(100);
-        settings.Properties.DropDownWidth = Unit.Percentage(100);
-        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+        settings.Properties.DropDownWidth = Unit.Pixel(1200);
+        settings.Properties.DropDownStyle = DropDownStyle.DropDownList;
         settings.CallbackRouteValues = new { Controller = "Factura", Action = "CmbCliente_Factura", Area = "Facturacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
@@ -17,9 +17,10 @@
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.AllowNull = true;
 
-        settings.Properties.Columns.Add("IdEntidad", "ID", 10);
-        settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
-        settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 70);
+        settings.Properties.Columns.Add("IdEntidad", "ID", 5);
+        settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 10);
+        settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 55);
+        settings.Properties.Columns.Add("CodPersona", "Clase", 30);
         settings.Properties.FilterMinLength = 3;
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente(); ValidarCliente();}";
     })
